--- a/Iaac/deployment.yaml
+++ b/Iaac/deployment.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deployment #The name of the Kubernetes Deployment to be created in the Kubernetes cluster
+  name: dplab-deployment #The name of the Kubernetes Deployment to be created in the Kubernetes cluster
   labels:
     app: dplab
 spec:
